2003-08-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix around long options
	  Hack up around output option parser

2003-08-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Fix wrong branch between set_tim_opt_{long,short}
	  Fix typo around long options
	  Hack up around interface option parser

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Some option renamed
	  --mid          -> default-mid
	  --noise-shaper -> noise-shaping
	  Hack up around effect option parser

2003-08-04  mput <root@mput.dip.jp>

	* timidity/timidity.c: Some option renamed
	  --auto-volume-compensation -> --[no-]volume-compensation
	  --config                   -> --config-file
	  --keysig                   -> --force-keysig
	  --key                      -> --adjust-key
	  --[no-]recomposer-dll      -> --[no-]-rcpcv-dll
	  --tempo                    -> --adjust-tempo
	  --[no-]overlap             -> --[no-]overlap-voice
	  --text-conversion          -> --output-charset
	  (parse_opt_204): Add

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo again

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Separate independence of --auto-volume-compensation
	  Merge --buffer-bits to --buffer-fragments

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options

2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around long options

2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Add function prototypes

2003-08-03 mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_223): Fix typo

2003-08-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix almost all warnings

2003-08-02  mput <root@mput.dip.jp>

	* timidity/timidity.c: Fix typo and so on

2003-08-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix around long options
